--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "blog",
-    "version": "1.0.0",
-    "description": "implementing RESTful routing",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app.js"
-    },
-    "author": "Paul Azemoh",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^1.17.1",
-        "ejs": "^2.5.6",
-        "express": "^4.15.2",
-        "mongoose": "^4.9.8"
-    }
+  "name": "blog",
+  "version": "1.0.0",
+  "description": "implementing RESTful routing",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
+  "author": "Paul Azemoh",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "express-sanitizer": "^1.0.2",
+    "mongoose": "^4.9.8"
+  }
 }
